codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__mention_popup_type_prefixes.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 4696
expression: terminal.backend()
---
"                                                                        "
"› $goog                                                                 "
"                                                                        "
"                                                                        "
"  Google Calendar  [插件] Connect Google Calendar for scheduling, avail…" Hidden by multi-width symbols: [(21, " "), (23, " ")]
"  Google Calendar  [技能] Find availability and plan event changes      " Hidden by multi-width symbols: [(21, " "), (23, " ")]
"  Google Calendar  [应用] Look up events and availability               " Hidden by multi-width symbols: [(21, " "), (23, " ")]
"                                                                        "
"  按 enter 插入，按 esc 关闭                                            " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (25, " "), (27, " ")]
